fix: nav overlaps scrollbar(#41)

--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -55,6 +55,7 @@ body {
 }
 
 #root {
+  position: relative;
   overflow: auto;
   width: 100vw;
   height: 100vh;
